added: tests, changed: docs
